src/main/java/edu/uiowa/jopenmm/OpenMMAmoebaLibrary.java

  /**
   * Original signature : <code>
   * OpenMM_Boolean OpenMM_AmoebaMultipoleForce_usesPeriodicBoundaryConditions(const OpenMM_AmoebaMultipoleForce*)
   * </code>
   */
  public static native int OpenMM_AmoebaMultipoleForce_usesPeriodicBoundaryConditions(
      PointerByReference target);
  /** Original signature : <code>OpenMM_AmoebaVdwForce* OpenMM_AmoebaVdwForce_create()</code> */
  public static native PointerByReference OpenMM_AmoebaVdwForce_create();
  /**
   * Original signature : <code>void OpenMM_AmoebaVdwForce_destroy(OpenMM_AmoebaVdwForce*)</code>
   */
  public static native void OpenMM_AmoebaVdwForce_destroy(PointerByReference target);
  /** Original signature : <code>char* OpenMM_AmoebaVdwForce_Lambda()</code> */
  public static native Pointer OpenMM_AmoebaVdwForce_Lambda();
  /**
   * Original signature : <code>
   * int OpenMM_AmoebaVdwForce_getNumParticles(const OpenMM_AmoebaVdwForce*)</code>
   */
  public static native int OpenMM_AmoebaVdwForce_getNumParticles(PointerByReference target);
  /**
   * Original signature : <code>
   * int OpenMM_AmoebaVdwForce_getNumParticleTypes(const OpenMM_AmoebaVdwForce*)</code>
   */
  public static native int OpenMM_AmoebaVdwForce_getNumParticleTypes(PointerByReference target);
  /**
   * Original signature : <code>
   * int OpenMM_AmoebaVdwForce_getNumTypePairs(const OpenMM_AmoebaVdwForce*)</code>
   */
  public static native int OpenMM_AmoebaVdwForce_getNumTypePairs(PointerByReference target);
  /**
   * Original signature : <code>
   * void OpenMM_AmoebaVdwForce_setParticleParameters(OpenMM_AmoebaVdwForce*, int, int, double, double, double, OpenMM_Boolean, int)
   * </code>
   */
  public static native void OpenMM_AmoebaVdwForce_setParticleParameters(
      PointerByReference target,
      int particleIndex,
      int parentIndex,
      double sigma,
      double epsilon,
      double reductionFactor,
      int isAlchemical,
      int typeIndex);
  /**
   * Original signature : <code>
   * void OpenMM_AmoebaVdwForce_getParticleParameters(const OpenMM_AmoebaVdwForce*, int, int*, double*, double*, double*, OpenMM_Boolean*, int*)
   * </code>
   */
  public static native void OpenMM_AmoebaVdwForce_getParticleParameters(
      PointerByReference target,
      int particleIndex,
      IntBuffer parentIndex,
      DoubleBuffer sigma,
      DoubleBuffer epsilon,
      DoubleBuffer reductionFactor,
      IntBuffer isAlchemical,
      IntBuffer typeIndex);
  /**
   * Original signature : <code>
   * void OpenMM_AmoebaVdwForce_getParticleParameters(const OpenMM_AmoebaVdwForce*, int, int*, double*, double*, double*, OpenMM_Boolean*, int*)
   * </code>
   */
  public static native void OpenMM_AmoebaVdwForce_getParticleParameters(
      PointerByReference target,
      int particleIndex,
      IntByReference parentIndex,
      DoubleByReference sigma,
      DoubleByReference epsilon,
      DoubleByReference reductionFactor,
      IntByReference isAlchemical,
      IntByReference typeIndex);
  /**
   * Original signature : <code>
   * int OpenMM_AmoebaVdwForce_addParticle(OpenMM_AmoebaVdwForce*, int, double, double, double, OpenMM_Boolean)
   * </code>
   */
  public static native int OpenMM_AmoebaVdwForce_addParticle(
      PointerByReference target,
      int parentIndex,
      double sigma,
      double epsilon,
      double reductionFactor,
      int isAlchemical);
  /**
   * Original signature : <code>
   * int OpenMM_AmoebaVdwForce_addParticle_1(OpenMM_AmoebaVdwForce*, int, int, double, OpenMM_Boolean)
   * </code>
   */
  public static native int OpenMM_AmoebaVdwForce_addParticle_1(
      PointerByReference target,
      int parentIndex,
      int typeIndex,
      double reductionFactor,
      int isAlchemical);
  /**
   * Original signature : <code>
   * int OpenMM_AmoebaVdwForce_addParticleType(OpenMM_AmoebaVdwForce*, double, double)</code>
   */
  public static native int OpenMM_AmoebaVdwForce_addParticleType(
      PointerByReference target, double sigma, double epsilon);
  /**
   * Original signature : <code>
   * void OpenMM_AmoebaVdwForce_getParticleTypeParameters(const OpenMM_AmoebaVdwForce*, int, double*, double*)
   * </code>
   */
  public static native void OpenMM_AmoebaVdwForce_getParticleTypeParameters(
      PointerByReference target, int typeIndex, DoubleBuffer sigma, DoubleBuffer epsilon);
  /**
   * Original signature : <code>
   * void OpenMM_AmoebaVdwForce_getParticleTypeParameters(const OpenMM_AmoebaVdwForce*, int, double*, double*)
   * </code>
   */
  public static native void OpenMM_AmoebaVdwForce_getParticleTypeParameters(
      PointerByReference target, int typeIndex, DoubleByReference sigma, DoubleByReference epsilon);
  /**
   * Original signature : <code>
   * void OpenMM_AmoebaVdwForce_setParticleTypeParameters(OpenMM_AmoebaVdwForce*, int, double, double)
   * </code>
   */
  public static native void OpenMM_AmoebaVdwForce_setParticleTypeParameters(
      PointerByReference target, int typeIndex, double sigma, double epsilon);
  /**
   * Original signature : <code>
   * int OpenMM_AmoebaVdwForce_addTypePair(OpenMM_AmoebaVdwForce*, int, int, double, double)</code>
   */
  public static native int OpenMM_AmoebaVdwForce_addTypePair(
      PointerByReference target, int type1, int type2, double sigma, double epsilon);
  /**
   * Original signature : <code>
   * void OpenMM_AmoebaVdwForce_getTypePairParameters(const OpenMM_AmoebaVdwForce*, int, int*, int*, double*, double*)
   * </code>
   */
  public static native void OpenMM_AmoebaVdwForce_getTypePairParameters(
      PointerByReference target,
      int pairIndex,
      IntBuffer type1,
      IntBuffer type2,
      DoubleBuffer sigma,
      DoubleBuffer epsilon);
  /**
   * Original signature : <code>
   * void OpenMM_AmoebaVdwForce_getTypePairParameters(const OpenMM_AmoebaVdwForce*, int, int*, int*, double*, double*)
   * </code>
   */
  public static native void OpenMM_AmoebaVdwForce_getTypePairParameters(
      PointerByReference target,
      int pairIndex,
      IntByReference type1,
      IntByReference type2,
      DoubleByReference sigma,
      DoubleByReference epsilon);
  /**
   * Original signature : <code>
   * void OpenMM_AmoebaVdwForce_setTypePairParameters(OpenMM_AmoebaVdwForce*, int, int, int, double, double)
   * </code>
   */
  public static native void OpenMM_AmoebaVdwForce_setTypePairParameters(
      PointerByReference target, int pairIndex, int type1, int type2, double sigma, double epsilon);
  /**
   * Original signature : <code>
   * void OpenMM_AmoebaVdwForce_setSigmaCombiningRule(OpenMM_AmoebaVdwForce*, const char*)</code>
   */
  public static native void OpenMM_AmoebaVdwForce_setSigmaCombiningRule(
      PointerByReference target, String sigmaCombiningRule);
  /**
   * Original signature : <code>
   * void OpenMM_AmoebaVdwForce_setSigmaCombiningRule(OpenMM_AmoebaVdwForce*, const char*)</code>
   */
  public static native void OpenMM_AmoebaVdwForce_setSigmaCombiningRule(
      PointerByReference target, Pointer sigmaCombiningRule);
  /**
   * Original signature : <code>
   * char* OpenMM_AmoebaVdwForce_getSigmaCombiningRule(const OpenMM_AmoebaVdwForce*)</code>
   */
  public static native Pointer OpenMM_AmoebaVdwForce_getSigmaCombiningRule(
      PointerByReference target);
  /**
   * Original signature : <code>
   * void OpenMM_AmoebaVdwForce_setEpsilonCombiningRule(OpenMM_AmoebaVdwForce*, const char*)</code>
   */
  public static native void OpenMM_AmoebaVdwForce_setEpsilonCombiningRule(
      PointerByReference target, String epsilonCombiningRule);
  /**
   * Original signature : <code>
   * void OpenMM_AmoebaVdwForce_setEpsilonCombiningRule(OpenMM_AmoebaVdwForce*, const char*)</code>
   */
  public static native void OpenMM_AmoebaVdwForce_setEpsilonCombiningRule(
      PointerByReference target, Pointer epsilonCombiningRule);
  /**
   * Original signature : <code>
   * char* OpenMM_AmoebaVdwForce_getEpsilonCombiningRule(const OpenMM_AmoebaVdwForce*)</code>
   */
  public static native Pointer OpenMM_AmoebaVdwForce_getEpsilonCombiningRule(
      PointerByReference target);
  /**
   * Original signature : <code>
   * OpenMM_Boolean OpenMM_AmoebaVdwForce_getUseDispersionCorrection(const OpenMM_AmoebaVdwForce*)
   * </code>
   */
  public static native int OpenMM_AmoebaVdwForce_getUseDispersionCorrection(
      PointerByReference target);
  /**
   * Original signature : <code>
   * void OpenMM_AmoebaVdwForce_setUseDispersionCorrection(OpenMM_AmoebaVdwForce*, OpenMM_Boolean)
   * </code>
   */
  public static native void OpenMM_AmoebaVdwForce_setUseDispersionCorrection(
      PointerByReference target, int useCorrection);
  /**
   * Original signature : <code>
   * OpenMM_Boolean OpenMM_AmoebaVdwForce_getUseParticleTypes(const OpenMM_AmoebaVdwForce*)</code>
   */
  public static native int OpenMM_AmoebaVdwForce_getUseParticleTypes(PointerByReference target);
  /**
   * Original signature : <code>
   * void OpenMM_AmoebaVdwForce_setParticleExclusions(OpenMM_AmoebaVdwForce*, int, const OpenMM_IntArray*)
   * </code>
   */
  public static native void OpenMM_AmoebaVdwForce_setParticleExclusions(
      PointerByReference target, int particleIndex, PointerByReference exclusions);
  /**
   * Original signature : <code>
   * void OpenMM_AmoebaVdwForce_getParticleExclusions(const OpenMM_AmoebaVdwForce*, int, OpenMM_IntArray*)
   * </code>
   */
  public static native void OpenMM_AmoebaVdwForce_getParticleExclusions(
      PointerByReference target, int particleIndex, PointerByReference exclusions);
  /**
   * Original signature : <code>
   * double OpenMM_AmoebaVdwForce_getCutoffDistance(const OpenMM_AmoebaVdwForce*)</code>
   */
  public static native double OpenMM_AmoebaVdwForce_getCutoffDistance(PointerByReference target);
  /**
   * Original signature : <code>
   * void OpenMM_AmoebaVdwForce_setCutoffDistance(OpenMM_AmoebaVdwForce*, double)</code>
   */
  public static native void OpenMM_AmoebaVdwForce_setCutoffDistance(
      PointerByReference target, double distance);
  /**
   * Original signature : <code>void OpenMM_AmoebaVdwForce_setCutoff(OpenMM_AmoebaVdwForce*, double)
   * </code>
   */
  public static native void OpenMM_AmoebaVdwForce_setCutoff(
      PointerByReference target, double cutoff);
  /**
   * Original signature : <code>double OpenMM_AmoebaVdwForce_getCutoff(const OpenMM_AmoebaVdwForce*)
   * </code>
   */
  public static native double OpenMM_AmoebaVdwForce_getCutoff(PointerByReference target);
  /**
   * Original signature : <code>
   * OpenMM_AmoebaVdwForce_NonbondedMethod OpenMM_AmoebaVdwForce_getNonbondedMethod(const OpenMM_AmoebaVdwForce*)
   * </code>
   */
  public static native int OpenMM_AmoebaVdwForce_getNonbondedMethod(PointerByReference target);
  /**
   * Original signature : <code>
   * void OpenMM_AmoebaVdwForce_setNonbondedMethod(OpenMM_AmoebaVdwForce*, OpenMM_AmoebaVdwForce_NonbondedMethod)
   * </code>
   */
  public static native void OpenMM_AmoebaVdwForce_setNonbondedMethod(
      PointerByReference target, int method);
  /**
   * Original signature : <code>
   * OpenMM_AmoebaVdwForce_PotentialFunction OpenMM_AmoebaVdwForce_getPotentialFunction(const OpenMM_AmoebaVdwForce*)
   * </code>
   */
  public static native int OpenMM_AmoebaVdwForce_getPotentialFunction(PointerByReference target);
  /**
   * Original signature : <code>
   * void OpenMM_AmoebaVdwForce_setPotentialFunction(OpenMM_AmoebaVdwForce*, OpenMM_AmoebaVdwForce_PotentialFunction)
   * </code>
   */
  public static native void OpenMM_AmoebaVdwForce_setPotentialFunction(
      PointerByReference target, int potential);
  /**
   * Original signature : <code>
   * void OpenMM_AmoebaVdwForce_setSoftcorePower(OpenMM_AmoebaVdwForce*, int)</code>
   */
  public static native void OpenMM_AmoebaVdwForce_setSoftcorePower(
      PointerByReference target, int n);
